// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/table/Table should match snapshot 1`] = `
<div>
  <div
    class="octo-table-body Table"
  >
    <div
      class="octo-table-header"
      id="mainBoardHeader"
    >
      <div
        class="octo-table-cell header-cell"
        style="overflow: unset; width: 100px; opacity: 1;"
      >
        <div
          class="MenuWrapper"
        >
          <span
            class="Label empty "
          >
            Name
          </span>
        </div>
        <div
          class="octo-spacer"
        />
        <div
          class="HorizontalGrip"
          draggable="true"
        />
      </div>
      <div
        class="octo-table-cell header-cell"
        draggable="true"
        style="overflow: unset; width: 100px; opacity: 1;"
      >
        <div
          class="MenuWrapper"
        >
          <span
            class="Label empty "
          >
            Property 1
            <svg
              class="SortDownIcon Icon"
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="50,20 50,80"
              />
              <polyline
                points="30,60 50,80 70,60"
              />
            </svg>
          </span>
        </div>
        <div
          class="octo-spacer"
        />
        <div
          class="HorizontalGrip"
          draggable="true"
        />
      </div>
      <div
        class="octo-table-cell header-cell"
        draggable="true"
        style="overflow: unset; width: 100px; opacity: 1;"
      >
        <div
          class="MenuWrapper"
        >
          <span
            class="Label empty "
          >
            Property 2
            <svg
              class="SortUpIcon Icon"
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="50,20 50,80"
              />
              <polyline
                points="30,40 50,20 70,40"
              />
            </svg>
          </span>
        </div>
        <div
          class="octo-spacer"
        />
        <div
          class="HorizontalGrip"
          draggable="true"
        />
      </div>
    </div>
    <div
      class="table-row-container"
    >
      <div
        class="TableRow octo-table-row"
        draggable="true"
        style="opacity: 1;"
      >
        <div
          class="octo-table-cell title-cell"
          id="mainBoardHeader"
          style="width: 100px;"
        >
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <input
              class="Editable undefined"
              placeholder="Untitled"
              spellcheck="true"
              title="title"
              value="title"
            />
          </div>
          <div
            class="open-button"
          >
            <button
              class="Button  "
              type="button"
            >
              Open
            </button>
          </div>
        </div>
        <div
          class="octo-table-cell"
          style="width: 100px;"
        >
          <div
            class="octo-propertyvalue"
            tabindex="0"
          >
            <span
              class="Label color1 "
            >
              value 1
            </span>
          </div>
        </div>
        <div
          class="octo-table-cell"
          style="width: 100px;"
        >
          <div
            class="octo-propertyvalue"
            tabindex="0"
          >
            <span
              class="Label empty "
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="octo-table-footer"
    >
      <div
        class="octo-table-cell"
      >
        + New
      </div>
    </div>
  </div>
</div>
`;

exports[`components/table/Table should match snapshot with GroupBy 1`] = `
<div>
  <div
    class="octo-table-body Table"
  >
    <div
      class="octo-table-header"
      id="mainBoardHeader"
    >
      <div
        class="octo-table-cell header-cell"
        style="overflow: unset; width: 100px; opacity: 1;"
      >
        <div
          class="MenuWrapper"
        >
          <span
            class="Label empty "
          >
            Name
          </span>
        </div>
        <div
          class="octo-spacer"
        />
        <div
          class="HorizontalGrip"
          draggable="true"
        />
      </div>
      <div
        class="octo-table-cell header-cell"
        draggable="true"
        style="overflow: unset; width: 100px; opacity: 1;"
      >
        <div
          class="MenuWrapper"
        >
          <span
            class="Label empty "
          >
            Property 1
            <svg
              class="SortDownIcon Icon"
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="50,20 50,80"
              />
              <polyline
                points="30,60 50,80 70,60"
              />
            </svg>
          </span>
        </div>
        <div
          class="octo-spacer"
        />
        <div
          class="HorizontalGrip"
          draggable="true"
        />
      </div>
      <div
        class="octo-table-cell header-cell"
        draggable="true"
        style="overflow: unset; width: 100px; opacity: 1;"
      >
        <div
          class="MenuWrapper"
        >
          <span
            class="Label empty "
          >
            Property 2
            <svg
              class="SortUpIcon Icon"
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="50,20 50,80"
              />
              <polyline
                points="30,40 50,20 70,40"
              />
            </svg>
          </span>
        </div>
        <div
          class="octo-spacer"
        />
        <div
          class="HorizontalGrip"
          draggable="true"
        />
      </div>
    </div>
    <div
      class="table-row-container"
    >
      <div
        class="octo-table-group"
      >
        <div
          class="octo-group-header-cell expanded"
          draggable="true"
          style="opacity: 1;"
        >
          <div
            class="octo-table-cell"
            style="width: 100px;"
          >
            <div
              class="Button IconButton"
            >
              <svg
                class="DisclosureTriangleIcon Icon"
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polygon
                  points="37,35 37,65 63,50"
                />
              </svg>
            </div>
            <span
              class="Label empty "
              title="Items with an empty Property 1 property will go here. This column cannot be removed."
            >
              No Property 1
            </span>
            
          </div>
          <button
            class="Button  "
            type="button"
          >
            0
          </button>
          <div
            class="MenuWrapper"
          >
            <div
              class="Button IconButton"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </div>
          </div>
          <div
            class="Button IconButton"
          >
            <i
              class="CompassIcon icon-plus AddIcon"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="octo-table-footer"
    />
  </div>
</div>
`;

exports[`components/table/Table should match snapshot, read-only 1`] = `
<div>
  <div
    class="octo-table-body Table"
  >
    <div
      class="octo-table-header"
      id="mainBoardHeader"
    >
      <div
        class="octo-table-cell header-cell"
        style="overflow: unset; width: 100px; opacity: 1;"
      >
        <div
          class="MenuWrapper disabled"
        >
          <span
            class="Label empty "
          >
            Name
          </span>
        </div>
        <div
          class="octo-spacer"
        />
      </div>
      <div
        class="octo-table-cell header-cell"
        draggable="true"
        style="overflow: unset; width: 100px; opacity: 1;"
      >
        <div
          class="MenuWrapper disabled"
        >
          <span
            class="Label empty "
          >
            Property 1
            <svg
              class="SortDownIcon Icon"
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="50,20 50,80"
              />
              <polyline
                points="30,60 50,80 70,60"
              />
            </svg>
          </span>
        </div>
        <div
          class="octo-spacer"
        />
      </div>
      <div
        class="octo-table-cell header-cell"
        draggable="true"
        style="overflow: unset; width: 100px; opacity: 1;"
      >
        <div
          class="MenuWrapper disabled"
        >
          <span
            class="Label empty "
          >
            Property 2
            <svg
              class="SortUpIcon Icon"
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="50,20 50,80"
              />
              <polyline
                points="30,40 50,20 70,40"
              />
            </svg>
          </span>
        </div>
        <div
          class="octo-spacer"
        />
      </div>
    </div>
    <div
      class="table-row-container"
    >
      <div
        class="TableRow octo-table-row"
        draggable="true"
        style="opacity: 1;"
      >
        <div
          class="octo-table-cell title-cell"
          id="mainBoardHeader"
          style="width: 100px;"
        >
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <input
              class="Editable readonly undefined"
              placeholder="Untitled"
              readonly=""
              spellcheck="true"
              title="title"
              value="title"
            />
          </div>
          <div
            class="open-button"
          >
            <button
              class="Button  "
              type="button"
            >
              Open
            </button>
          </div>
        </div>
        <div
          class="octo-table-cell"
          style="width: 100px;"
        >
          <div
            class="octo-propertyvalue"
            tabindex="0"
          >
            <span
              class="Label color1 "
            >
              value 1
            </span>
          </div>
        </div>
        <div
          class="octo-table-cell"
          style="width: 100px;"
        >
          <div
            class="octo-propertyvalue"
            tabindex="0"
          >
            <span
              class="Label empty "
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="octo-table-footer"
    />
  </div>
</div>
`;
